[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual_navigation"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "rerun-sdk",
    "scipy",
    "numpy",
    "rerun_sdk",
    "jax",
    "pysrt"

]

[project.scripts]
visual_navigation = "visual_navigation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]