[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual_navigation"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "rerun-sdk",
    "scipy",
    "numpy",
]

[project.scripts]
calibrate = "camera_calibration.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]